@@ -4,6 +4,7 @@
 	to use only libdecnumber operations.
 	* ieee754r/isgreaterd32.c (isgreater): Likewise.
 	* ieee754r/isgreaterequald32.c (isgreaterequal): Likewise.
+	* ieee754r/islessequald32.c (islessequal): Likewise.
 
 2014-06-04  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>
 
